<?xml version="1.0"?>
<package format="2">
  <name>my_urdf</name>
  <version>0.0.0</version>
  <description>The my_urdf package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>

  <build_export_depend>urdf</build_export_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
